Fixed menu items layout when unrolling on mobile devices

--- a/css/src/theme-menu.scss
+++ b/css/src/theme-menu.scss
@@ -4,6 +4,10 @@
 .navbar-collapse {
   border-color: transparent;
   max-height: 100%;
+
+  @media #{$tablet} {
+    padding-top: 50px;
+  }
 }
 
 .navbar-header {
